some minor changes

--- a/caduceus.cabal
+++ b/caduceus.cabal
@@ -13,8 +13,8 @@ copyright:          Dylan Martin, 2021
 category:           Finance
 build-type:         Simple
 extra-source-files:
-    Changelog.md
-    Readme.md
+    CHANGELOG.md
+    REAMDE.md
 
 source-repository head
   type: git
