--- a/caduceus.cabal
+++ b/caduceus.cabal
@@ -14,7 +14,7 @@ category:           Finance
 build-type:         Simple
 extra-source-files:
     CHANGELOG.md
-    REAMDE.md
+    README.md
 
 source-repository head
   type: git
@@ -26,21 +26,20 @@ library
                     , Wires.IBAN.Internal  
   other-extensions:   OverloadedStrings
   hs-source-dirs:     src
-  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:        -Weverything -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-deriving-strategies -fdiagnostics-color=always +RTS -A128m -n2m -RTS
   build-depends:      base >=4.7 && <5
                     , containers >=0.3 && <0.7
                     , iso3166-country-codes
                     , text >=0.11 && <1.3
-                    , unordered-containers ==0.2.*
   default-language:   Haskell2010
 
 test-suite caduceus-test
   type:               exitcode-stdio-1.0
-  main-is:            Main.hs
+  main-is:            Spec.hs
   other-extensions:   OverloadedStrings
-  other-modules:      IBANRegistryExamples
+  other-modules:      ExampleIBANs
   hs-source-dirs:     test
-  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:        -Weverything -Wno-missing-exported-signatures -Wno-missing-export-lists -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-deriving-strategies -fdiagnostics-color=always +RTS -A128m -n2m -RTS
   build-depends:      base >=4.7 && <5
                     , HUnit
                     , tasty
