--- a/caduceus.cabal
+++ b/caduceus.cabal
@@ -34,6 +34,8 @@ library
                     , containers >=0.3 && <0.7
                     , iso3166-country-codes
                     , text >=0.11 && <1.3
+                    , regex-tdfa-text
+                    , regex-tdfa
   default-language:   Haskell2010
 
 test-suite caduceus-test
